--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@
     font-family: "JetBrains Sans", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     font-weight: 300;
     color: rgba(255, 255, 255, 0.87);
-    background-color: #3f0048;
+    background-color: #ffffff;
     text-align: center;
 }
 
@@ -20,6 +20,8 @@ header {
     font-family: "JetBrains Sans", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     font-weight: bold;
     height: 85px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .profile {
@@ -32,6 +34,7 @@ header {
     font-family: "JetBrains Sans", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     font-weight: 800;
     font-size: 1.5em;
+    color: black;
 }
 
 .profile-text{
@@ -55,6 +58,7 @@ body {
     font-size: 30px;
     line-height: 39px;
     font-weight: 800;
+    color: black;
 }
 
 .subtitle {
@@ -62,6 +66,7 @@ body {
     line-height: 39px;
     font-weight: 800;
     padding-bottom: 1px;
+    color: black;
 }
 
 .experience {
@@ -70,14 +75,32 @@ body {
     font-weight: 300;
     width: 65vh;
     text-align: left;
+    color: black;
 }
 
 .divider {
-    width: 80%;
+    width: 100%;
     height: 3px;
     background-color: black;
     margin-left: auto;
     margin-right: auto;
+}
+.work-experience-full {
+    font-family: "JetBrains Sans", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    width: 80vh;
+    padding: 25px;
+    background-color: rgb(131, 160, 168);
+    border-radius: 50px;
+    border-color: blueviolet;
+}
+
+ul {
+    list-style-type: circle;
+}
+
+li::marker {
+    font-family: "JetBrains Sans", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-size: 1.5em;
 }
 
 img {
