--- a/public/style.css
+++ b/public/style.css
@@ -110,6 +110,7 @@ body {
     background-color: rgb(131, 160, 168);
     border-radius: 50px;
     padding: 25px;
+    margin-bottom: 20vh;
 }
 
 .divider {
@@ -189,4 +190,3 @@ button:hover {
     opacity: 80%;
     transition: 0.5s;
 }
-
